# pretty_shell

./: .gitignore  CMakeLists.txt  Makefile  Session.vim  color.c  compile_commands.json  exec.c  exec.h  main.c  my_printf.c  parser.c  parser.h  pretty_shell  shell.c
include/: color.h  lib.h  my_printf.h  parser.h  shell.h
lib/my/: Makefile
lib/my/include/: my.h
lib/my/src/: Makefile  convert_base.c  my_compute_power_rec.c  my_compute_square_root.c  my_find_prime_sup.c  my_getnbr.c  my_getnbr_base.c  my_is_prime.c  my_isneg.c  my_put_nbr.c  my_putchar.c  my_puterr.c  my_putnbr_base.c  my_putstr.c  my_revstr.c  my_show_word_array.c  my_showmem.c  my_showstr.c  my_sort_int_array.c  my_str_isalpha.c  my_str_islower.c  my_str_isnum.c  my_str_isprintable.c  my_str_isupper.c  my_str_to_word_array.c  my_strcapitalize.c  my_strcat.c  my_strcmp.c  my_strcpy.c  my_strdup.c  my_strlen.c  my_strlowcase.c  my_strncat.c  my_strncmp.c  my_strncpy.c  my_strstr.c  my_strupcase.c  my_swap.c
src/: Makefile  color.c  exec.c  main.c  my_printf.c  parser.c  shell.c
